--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,11 @@
 			<groupId>org.springframework.modulith</groupId>
 			<artifactId>spring-modulith-starter-jpa</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.puppycrawl.tools</groupId>
+			<artifactId>checkstyle</artifactId>
+			<version>10.13.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
