--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
 			<artifactId>checkstyle</artifactId>
 			<version>10.13.0</version>
 		</dependency>
+		<dependency>
+			<groupId>jakarta.persistence</groupId>
+			<artifactId>jakarta.persistence-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
